<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_logs"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/alarm_logs" 
        android:visible="true"/>

    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/alarm_edit"/>
    
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/alarm_del"/>
    
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/alarm_settings"/>
    
    <item
        android:id="@+id/action_addnew"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/alarm_add"
        android:visible="true"/>

</menu>
