<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblEditAlarmName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/txtEditAlarmName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblEditAlarmBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_select_brand" />

    <Spinner
        android:id="@+id/spEditBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblEditAlarmModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_select_model" />

    <Spinner
        android:id="@+id/spEditModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblEditAlarmPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_phone_number" />

    <EditText
        android:id="@+id/txtEditPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/lblEditAlarmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_password" />

    <EditText
        android:id="@+id/txtEditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/btnAlarmUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_update" />

</LinearLayout>
