<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <LinearLayout
        android:id="@+id/llmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblAlarmName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_name" />

        <EditText
            android:id="@+id/txtAlarmName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

    <Spinner
        android:id="@+id/spbrand"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:prompt="@string/alarm_select_brand"
        android:textColor="@color/textbox_color" />

    <Spinner
        android:id="@+id/spmodel"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:prompt="@string/alarm_select_model" />

    <TextView
        android:id="@+id/lblphonenumber"
        android:layout_width="wrap_content"
        android:layout_height="20dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/alarm_phone_number"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/txtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/lblphonepass"
        android:layout_width="wrap_content"
        android:layout_height="20dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/alarm_password"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnAddList"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/alarm_add_list" />

    </LinearLayout>

</ScrollView>